Implements idiomatic gradle (#7)